# ROS2-edge-avoiding-robot

./: README.md
src/bot_bringup/: CMakeLists.txt  package.xml
src/bot_bringup/launch/: simulate.robot.py
src/bot_controller/: CMakeLists.txt  package.xml
src/bot_controller/config/: bot_controller.yaml  slam_config.yaml
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: display.launch.py  gazebo.launch.py
src/bot_description/rviz/: display.rviz
src/bot_description/urdf/: bot_base.xacro  bot_sensors.xacro  gazebo.xacro  main.urdf.xacro  ros2_control.xacro
src/bot_description/worlds/: empty.world  empty_table.world
src/bot_script/: package.xml  setup.cfg  setup.py
src/bot_script/bot_script/: edge_detection.py
