<?xml version="1.0"?>
<package format="3">
  <name>bot_bringup</name>
  <version>0.0.0</version>
  <description>Launch everything for bot simulation</description>
  <maintainer email="kutkarsh706@gmail.com">utk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>bot_controller</exec_depend>
  <exec_depend>bot_description</exec_depend>
  <exec_depend>bot_script</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>