<?xml version="1.0"?>
<package format="3">
  <name>bot_controller</name>
  <version>0.0.0</version>
  <description>bot Controller Package</description>
  <maintainer email="kutkarsh706@gmail.com">Utkarsh</maintainer>
  <license>Apache 2.0</license>
  <author email="kutkarsh706@gmail.com">utk</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>eigen</depend>
  <depend>trajectory_msgs</depend>
  <depend>twist_mux_msgs</depend>
  <depend>rclcpp_action</depend>
  
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>