<?xml version="1.0"?>
<package format="3">
  <name>bot_script</name>
  <version>0.0.0</version>
  <description>Edge detection and behavior scripts for the bot</description>
  <maintainer email="kutkarsh706@gmail.com">utk</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>